--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "swiper": "^8.2.4"
+    "swiper": "^8.2.4",
+    "@reduxjs/toolkit": "^1.7.0-rc.0",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.8.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-redux": "^8.0.2",
+    "react-time-ago": "^7.2.1",
+    "spinners-react": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
