--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.7.0-rc.0",
     "daisyui": "^2.17.0",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.8.2",
     "init": "^0.1.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "swiper": "^8.2.4",
-    "@reduxjs/toolkit": "^1.7.0-rc.0",
-    "email-validator": "^2.0.4",
-    "firebase": "^9.8.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-time-ago": "^7.2.1",
-    "spinners-react": "^1.0.7"
+    "spinners-react": "^1.0.7",
+    "swiper": "^8.2.4",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
