--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-time-ago": "^7.2.1",
     "spinners-react": "^1.0.7",
     "swiper": "^8.2.4",
+    "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
