--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-time-ago": "^7.2.1",
     "spinners-react": "^1.0.7",
