--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-spinners": "^0.13.6",
     "react-time-ago": "^7.2.1",
     "spinners-react": "^1.0.7",
     "swiper": "^8.2.4",
