--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
