--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.7.0-rc.0",
+    "@types/uuid": "^8.3.4",
     "daisyui": "^2.17.0",
     "email-validator": "^2.0.4",
     "firebase": "^9.8.2",
