--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.17.0",
     "email-validator": "^2.0.4",
     "firebase": "^9.8.2",
+    "formik": "^2.2.9",
     "init": "^0.1.2",
     "next": "12.2.2",
     "react": "18.2.0",
@@ -29,7 +30,8 @@
     "swiper": "^8.2.4",
     "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
