--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "init": "^0.1.2",
     "next": "12.2.2",
+    "npm": "^8.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -26,6 +27,7 @@
     "react-redux": "^8.0.2",
     "react-spinners": "^0.13.6",
     "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.0.8",
     "spinners-react": "^1.0.7",
     "swiper": "^8.2.4",
     "swr": "^1.3.0",
